core/tests/compile_fail/event_tuple_struct.rs
use quasar_core::prelude::*;

#[event(discriminator = [1])]
pub struct Bad(u64);

fn main() {}
